hw6_lab10/tests/errors/sem_type_mismatch_assign.kt
// EXPECT: semantic error — assigning String to Int var
fun main() {
    var x: Int = 0
    x = "hello"
}
